clusters/apps/env/production/rook/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ceph-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
    internal-dns.alpha.kubernetes.io/hostname: ceph.${FAMILY_DOMAIN}
    internal-dns.alpha.kubernetes.io/target: ${CLUSTER_LB_INGRESS_INTERNAL}
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`ceph.${FAMILY_DOMAIN}`)"
      priority: 10
      services:
        - name: rook-ceph-mgr-dashboard
          port: 7000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ceph.${FAMILY_DOMAIN}
